--- a/frontend/src/app/core/nav-bar/nav-bar.component.css
+++ b/frontend/src/app/core/nav-bar/nav-bar.component.css
@@ -1,8 +1,12 @@
 a{
     text-decoration:none;
+    color: #343a40;
 }
 a:hover{
     text-decoration:underline;
+}
+a.active{
+  color: orange;
 }
 .cart-no{
     position: absolute;
@@ -15,4 +19,10 @@ a:hover{
     text-align: center;
     top: -12px;
     right: 32px;
+}
+img{
+  cursor: pointer;
+}
+img:focus{
+  outline: none;
 }
