--- a/frontend/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/core/nav-bar/nav-bar.component.html
@@ -1,11 +1,12 @@
 <p>nav-bar works!</p>
-<div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 
+<div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3
 bg-white border-bottom shadow-sm fixed-top">
-    <img src="/assets/images/logo.png" style="max-height: 70px;" alt="logo">
+    <img src="/assets/images/logo.png" style="max-height: 70px;" alt="logo" routerLink="/">
     <nav class="my-2 my-md-0 me-md-3 text-uppercase" style="font-size: large;">
-      <a class="p-2 text-dark  link-body-emphasis" href="#">Home</a>
-      <a class="p-2 text-dark  link-body-emphasis" href="#">Shop</a>
-      <a class="p-2 text-dark  link-body-emphasis" href="#">Contact</a>
+      <a class="p-2 text-dark  link-body-emphasis" [routerLink]="['/']" routerLinkActive="active"
+      [routerLinkActiveOptions]="{exact:true}">Home</a>
+      <a class="p-2 text-dark  link-body-emphasis" [routerLink]="['/shop']" routerLinkActive="active" >Shop</a>
+      <a class="p-2 text-dark  link-body-emphasis" [routerLink]="['/test-error']" routerLinkActive="active">Error</a>
     </nav>
     <div class="d-flex align-items-center">
       <a class="position-relative">
