--- a/frontend/src/app/shop/shop.component.html
+++ b/frontend/src/app/shop/shop.component.html
@@ -3,7 +3,7 @@
         {{product.name}}
     </li>
 </ul> -->
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <section class="col-3">
             <h5 class="text-warning ml-3">Sort</h5>
