--- a/frontend/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/core/nav-bar/nav-bar.component.html
@@ -18,7 +18,29 @@ bg-white border-bottom shadow-sm fixed-top">
         <a routerLink="/account/register" class="btn btn-outline-secondary text-decoration-none me-3" href="#">Sign up</a>
       </ng-container>
       <ng-container *ngIf="(currentUser$ | async)">
-        <a>Welcome {{(currentUser$ | async)?.displayName}}</a>
+        <div class="dropdown ms-3 me-5" dropdown >
+          <a class="dropdown-toggle" style="cursor: pointer;" dropdownToggle>
+            <strong> 
+              Welcome {{(currentUser$ | async)?.displayName}}
+            </strong>
+          </a>
+          <div class="dropdown-menu dropdown-menu-end" style="cursor: pointer;" *dropdownMenu>
+            <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
+              <i class="fa fa-shopping-cart me-3">View Basket</i>
+            </a>
+            <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+              <i class="fa fa-history me-3">View Orders</i>
+            </a>
+            <div class="dropdown-divider">
+
+            </div>
+            <a (click)="logOut()" class="dropdown-item d-flex align-items-center py-2">
+              <i class="fa fa-sign-out me-3">Logout</i>
+            </a>
+          </div>
+        </div>
+        
+
       </ng-container>
     </div>
   </div>
