--- a/frontend/src/app/account/login/login.component.html
+++ b/frontend/src/app/account/login/login.component.html
@@ -5,25 +5,58 @@
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
       </div>
 
+
       <div class="form-label-group">
-        <input formControlName="email" type="email" id="inputEmail" class="form-control" placeholder="Email address">
+        <input formControlName="email" type="email" id="inputEmail" class="form-control" placeholder="Email Address">
         <label for="inputEmail">Email address</label>
       </div>
+      <span class="text-danger" 
+      *ngIf="loginForm.get('email')?.invalid &&
+      loginForm.get('email')?.touched &&
+      loginForm.get('email')?.errors?.['required']
+      ">Email is required</span>
 
       <div class="form-label-group">
         <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Password">
         <label for="inputPassword">Password</label>
       </div>
 
-      <!-- <div class="checkbox mb-3">
+
+      <span class="text-danger" 
+        *ngIf="loginForm.get('password')?.invalid &&
+        loginForm.get('password')?.touched &&
+        loginForm.get('password')?.errors?.['required']
+        ">Password is required</span>
+      <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
-       -->
-      <button class="btn btn-lg btn-primary w-100" type="submit">Sign in</button>
-      <!-- <p class="mt-5 mb-3 text-muted text-center">© 2017-2019</p> -->
+      
+      <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary w-100" type="submit">Sign in</button>
+
     </form>
 
   </div>
+
+
 </div>
+
+<!-- 
+<div class="d-flex justify-content-center mt-5">
+  <div class="col-3">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="text-center mb-4">
+        <h1 class="mb-3">Login</h1>
+      </div>
+      
+      <app-text-input formControlName="email" [label]="'Email Address'"></app-text-input>
+      <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
+
+      <div class="d-grid">
+        <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
+      </div>
+    </form>
+  </div>
+  
+</div> -->
