update checkout UI

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,3 +13,5 @@ label.xng-breadcrumb-trail{
   padding: 0 0;
   
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
