--- a/frontend/src/app/shared/components/order-totals/order-totals.component.html
+++ b/frontend/src/app/shared/components/order-totals/order-totals.component.html
@@ -1,5 +1,6 @@
 <div class="bg-light px-4 py-3 text-uppercase font-weight-bold">
-  Order Summary
+  <h5>Order Summary</h5>
+  
 </div>
 <div class="p-4">
   <p class="font-italic mb-4">
